<resources>
    <string name="app_name">OrganizApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="search_hint">Hello second fragmen. Arg: %1$s</string>

    <!-- TEXTOS PARA BOTONES -->
    <string name="btn_ingresar_producto">Ingresar Producto</string>

    <string name="btn_usuario">Usuarios</string>


    <string name="btn_categoria">Categorias</string>
    <string name="btn_add_categoria">Agregar Categoria</string>
    <string name="btn_edit_categoria">Editar Categoria</string>
    <string name="btn_save_categoria">Guardar Categoria</string>
    <string name="btn_remove_categoria">Eliminar Categoria</string>

    <string name="btn_producto">Producto</string>
    <string name="btn_list_producto">Listado de Productos</string>
    <string name="btn_add_producto">Agregar Producto</string>
    <string name="btn_edit_producto">Editar Producto</string>
    <string name="btn_save_producto">Guardar Producto</string>
    <string name="btn_remove_producto">Eliminar Producto</string>

    <string name="btn_marca">Marcas</string>
    <string name="btn_add_marca">Agregar Marca</string>
    <string name="btn_edit_marca">Editar Marca</string>
    <string name="btn_save_marca">Guardar Marca</string>
    <string name="btn_remove_marca">Eliminar Marca</string>


    <!-- TEXTOS PARA LOS INGRESOS DE MARCAS -->
    <string name="marca_nombre">Nombre de la Marca</string>
    <string name="marca_descripcion">Descripción de la Marca</string>

    <string name="categoria_nombre">Nombre de la Categoria</string>
    <string name="categoria_descripcion">Descripción de la Categoria</string>

    <!-- TEXTOS PARA LOS INGRESOS DE TEXTOS -->

    <string name="txt_codigo">Codigo de Producto</string>
    <string name="txt_nombre">Nombre del Producto</string>
    <string name="txt_descripcion">Descripcion del Producto</string>
    <string name="txt_marca">Marca del Producto</string>
    <string name="txt_categoria">Categoria del Producto</string>
    <string name="txt_fecha_compra">Fecha de Compra</string>
    <string name="txt_cantidad">Cantidad de Productos</string>


    <string name="lbl_texto_vacio">--------------------------</string>

    <string name="lbl_save_ok">Datos guardados correctamente.</string>
    <string name="lbl_save_error">Error al guardar.\n Reintente mas tarde.</string>
    <string name="lbl_save_fail">Debe ingresar todos los datos.</string>

    <string name="lbl_remove_ok">Eliminación correcta.</string>
    <string name="lbl_remove_fail">Error al Intentar Eliminar \n Reintente mas tarde.</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Iniciar Sesion</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>