<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color3"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayoutContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.008">

        <Button
            android:id="@+id/PRODUCTOS"
            android:tag="PRODUCTOS"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="20dp"
            android:onClick="cambiarPantalla"
            android:visibility="gone"
            android:text="@string/btn_list_producto" />

        <Button
            android:id="@+id/PRODUCTO"
            android:tag="PRODUCTO"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="20dp"
            android:onClick="cambiarPantalla"
            android:visibility="gone"
            android:text="@string/btn_ingresar_producto" />

        <Button
            android:id="@+id/CATEGORIAS"
            android:tag="CATEGORIAS"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="20dp"
            android:onClick="cambiarPantalla"
            android:visibility="gone"
            android:text="@string/btn_categoria" />

        <Button
            android:id="@+id/MARCAS"
            android:tag="MARCAS"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="20dp"
            android:onClick="cambiarPantalla"
            android:visibility="gone"
            android:text="@string/btn_marca" />

        <Button
            android:id="@+id/INVENTARIO"
            android:tag="INVENTARIO"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="20dp"
            android:onClick="cambiarPantalla"
            android:visibility="gone"
            android:text="@string/btn_add_stock" />
        <Button
            android:id="@+id/USUARIO"
            android:tag="USUARIO"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="20dp"
            android:onClick="cambiarPantalla"
            android:visibility="gone"
            android:text="@string/btn_usuario" />
        <Button
            android:id="@+id/VENTAS"
            android:tag="VENTAS"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="20dp"
            android:onClick="cambiarPantalla"
            android:visibility="gone"
            android:text="@string/btn_add_venta" />
    </LinearLayout>

</ScrollView>