<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color3"
    tools:context=".ui.EditarProductoActivity">

    <LinearLayout
        android:id="@+id/linearLayoutContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.008">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/codigo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/txt_codigo"
                android:inputType="text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent=".8" />

            <ImageView
                android:id="@+id/btnEscanear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:onClick="escanear"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintRight_toRightOf="@id/codigo"
                app:layout_constraintStart_toEndOf="@+id/codigo"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent=".2"
                app:srcCompat="@android:drawable/ic_menu_search" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_nombre">
            <requestFocus />
        </EditText>

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="">
        </AutoCompleteTextView>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_fecha_compra"></EditText>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/txt_cantidad"></EditText>


        <AutoCompleteTextView
            android:layout_width="fill_parent"
            android:inputType="textNoSuggestions"
            android:layout_height="wrap_content"
            android:completionThreshold="1"
            android:id="@+id/state_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:text="string/none"
            android:id="@+id/state_capital" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:text="string/none"
            android:id="@+id/id_categoria" />

        <MultiAutoCompleteTextView
            android:id="@+id/multiAutoCompleteTextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_below="@+id/autoCompleteTextView1"
            android:layout_alignLeft="@+id/autoCompleteTextView1"
            android:layout_alignStart="@+id/autoCompleteTextView1"
            android:hint="Multi Auto Complete " />


    </LinearLayout>

</ScrollView>
