<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/color3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.EditarStockProductoActivity">

    <LinearLayout
        android:id="@+id/linearLayoutContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.008">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/codigo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/txt_codigo"
                android:inputType="text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent=".8" />

            <ImageView
                android:id="@+id/btnEscanear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:onClick="escanear"
                app:layout_constraintRight_toRightOf="@id/codigo"
                app:layout_constraintStart_toEndOf="@+id/codigo"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent=".2"
                app:srcCompat="@android:drawable/ic_menu_search" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <LinearLayout
            android:id="@+id/detalleProducto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.008"
            android:visibility="invisible">


            <ImageView
                android:id="@+id/imagen"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/man" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="33dp"
                        android:gravity="center_vertical"
                        android:layout_weight="1"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        android:text="Nombre" />

                    <TextView
                        android:id="@+id/nombre"
                        android:layout_width="wrap_content"
                        android:layout_height="33dp"
                        android:gravity="center_vertical|left"
                        android:layout_weight="1"
                        android:textSize="16dp"
                        android:textStyle="italic"
                        android:text="@string/lbl_texto_vacio" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="33dp"
                        android:gravity="center_vertical"
                        android:layout_weight="1"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        android:text="Apellido Paterno" />

                    <TextView
                        android:id="@+id/descripcion"
                        android:layout_width="wrap_content"
                        android:layout_height="33dp"
                        android:gravity="center_vertical|left"
                        android:layout_weight="1"
                        android:textSize="16dp"
                        android:textStyle="italic"
                        android:text="@string/lbl_texto_vacio" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="33dp"
                        android:gravity="center_vertical"
                        android:layout_weight="1"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        android:text="@string/txt_categoria" />

                    <TextView
                        android:id="@+id/materno"
                        android:layout_width="wrap_content"
                        android:layout_height="33dp"
                        android:gravity="center_vertical|left"
                        android:layout_weight="1"
                        android:textSize="16dp"
                        android:textStyle="italic"
                        android:text="@string/lbl_texto_vacio" />
                </TableRow>


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="33dp"
                        android:gravity="center_vertical"
                        android:layout_weight="1"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        android:text="@string/txt_marca" />

                    <TextView
                        android:id="@+id/telefono"
                        android:layout_width="wrap_content"
                        android:layout_height="33dp"
                        android:gravity="center_vertical|left"
                        android:layout_weight="1"
                        android:textSize="16dp"
                        android:textStyle="italic"
                        android:text="@string/lbl_texto_vacio" />
                </TableRow>

            </TableLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginBottom="20dp"
                android:onClick="agregarProductos"
                android:text="Agregar" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/listadoLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="invisible">

            <ListView
                android:id="@+id/listado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"></ListView>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>